Feat: Phase 1a completed

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -1405,7 +1405,7 @@
    "outputs": [],
    "source": [
     "# Query function\n",
-    "def execute_query(connection, queries, cursor):\n",
+    "def execute_query(queries, cursor):\n",
     "    try:\n",
     "        for query in queries:\n",
     "            cursor.execute(query)\n",
@@ -1424,8 +1424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Phase 1: Create tables\n",
-    "\n",
+    "### Phase 1a: Create tables<br>\n",
     "- **stations**: to hold information related to the stations location in the city along with their total bikes\n",
     "- **pois**: to hold the information about each POI (including rating, popularity, price)\n",
     "- **categories**: simulates the api category for Foursquare\n",
@@ -1504,8 +1503,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection = create_connection('../data/mtl_bike_rentals.sqlite')\n",
-    "cursor = connection.cursor()"
+    "# Create connection and cursor\n",
+    "conn = create_connection('../data/mtl_bike_rentals.sqlite')"
    ]
   },
   {
@@ -1514,7 +1513,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create cursor\n",
+    "cursor = conn.cursor()\n",
     "\n",
+    "# Call the function to create the tables\n",
+    "execute_queries(create_table_queries, cursor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert data query for stations table\n",
+    "insert_stations = [\n",
     "\"\"\"\n",
     "INSERT INTO\n",
     "  users (name, age, gender, nationality)\n",
@@ -1524,7 +1537,28 @@
     "  ('Brigitte', 35, 'female', 'England'),\n",
     "  ('Mike', 40, 'male', 'Denmark'),\n",
     "  ('Elizabeth', 21, 'female', 'Canada');\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "]\n",
+    "# Call the function to execute queries\n",
+    "execute_queries(connection, insert_stations, cursor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Close the cursor and connection\n",
+    "cursor.close()\n",
+    "connection.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Phase 2: Read data"
    ]
   },
   {
@@ -1540,8 +1574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def execute_read_query(connection, query):\n",
-    "    cursor = connection.cursor()\n",
+    "def execute_read_query(query, cursor):\n",
     "    result = None\n",
     "    try:\n",
     "        cursor.execute(query)\n",
