Update: missing station in yelp

--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -2713,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2728,7 +2728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2875,7 +2875,7 @@
        "4       0.869    1.0      790  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2886,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3027,7 +3027,7 @@
        "4          8.175  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3038,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3130,7 +3130,7 @@
        "4        4  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3155,7 +3155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3166,14 +3166,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     fsq_id                   name    s_lat      s_lon  \\\n",
+      "0  4cb240b8cbab236ae154af73  Restaurant Prima Luna  45.6175 -73.606011   \n",
+      "1  4e0b48221f6edc06be259aec         Salle Désilets  45.6175 -73.606011   \n",
+      "2  4e0b48221f6edc06be259aec         Salle Désilets  45.6175 -73.606011   \n",
+      "3  4ea9b28cb803cf1ffacd7c0d            Café l'Exil  45.6175 -73.606011   \n",
+      "4  4ea9b28cb803cf1ffacd7c0d            Café l'Exil  45.6175 -73.606011   \n",
+      "\n",
+      "       p_lat      p_lon  category_id       category_name  distance  rating  \\\n",
+      "0  45.617439 -73.593995        13236  Italian Restaurant       941     7.4   \n",
+      "1  45.617818 -73.606000        10039         Music Venue        19     NaN   \n",
+      "2  45.617818 -73.606000        11130     Office Building        19     NaN   \n",
+      "3  45.617214 -73.604961        13034                Café        79     NaN   \n",
+      "4  45.617214 -73.604961        13035         Coffee Shop        79     NaN   \n",
+      "\n",
+      "   popularity  price  station  \n",
+      "0       0.985    1.0      790  \n",
+      "1       0.969    NaN      790  \n",
+      "2       0.969    NaN      790  \n",
+      "3       0.869    1.0      790  \n",
+      "4       0.869    1.0      790  \n",
+      "                       id                   name  rating  price  review_count  \\\n",
+      "0  vRJPrk-VH75uxLiVVprBhA               Capucine     5.0    NaN             4   \n",
+      "1  TyKGLi1V1PFRHYmHDjFUMQ  Restaurant Prima Luna     4.0    3.0            14   \n",
+      "2  TyKGLi1V1PFRHYmHDjFUMQ  Restaurant Prima Luna     4.0    3.0            14   \n",
+      "3  DOVOYnq3y-milXVI03GIrg  Boulangerie Adriatica     4.0    NaN             1   \n",
+      "4  DOVOYnq3y-milXVI03GIrg  Boulangerie Adriatica     4.0    NaN             1   \n",
+      "\n",
+      "     s_lat      s_lon      p_lat      p_lon category_alias  distance  \\\n",
+      "0  45.6175 -73.606011  45.619670 -73.609704        italian       375   \n",
+      "1  45.6175 -73.606011  45.617234 -73.594176        italian       921   \n",
+      "2  45.6175 -73.606011  45.617234 -73.594176          sushi       921   \n",
+      "3  45.6175 -73.606011  45.615210 -73.609710        italian       366   \n",
+      "4  45.6175 -73.606011  45.615210 -73.609710          pizza       366   \n",
+      "\n",
+      "   scaled_rating  station  \n",
+      "0          9.400      790  \n",
+      "1          8.175      790  \n",
+      "2          8.175      790  \n",
+      "3          8.175      790  \n",
+      "4          8.175      790  \n"
+     ]
+    }
+   ],
    "source": [
     "# stations columns\n",
     "fsq_poi['station'] = fsq_poi.apply(lambda row: locations.get((row['s_lat'], row['s_lon']), 9999), axis=1)\n",
     "yelp_poi['station'] = yelp_poi.apply(lambda row: locations.get((row['s_lat'], row['s_lon']), 9999), axis=1)\n",
-    "\n",
+    "print(fsq_poi.head())\n",
+    "print(yelp_poi.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save these columns in original csv file for future use\n",
     "fsq_poi.to_csv('../data/fsq_businesses.csv', index=False)\n",
     "yelp_poi.to_csv('../data/yelp_businesses.csv', index=False)"
@@ -3181,7 +3237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3205,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3278,7 +3334,7 @@
        "135        4        20.0         50"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3297,7 +3353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3308,7 +3364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3339,17 +3395,17 @@
       "1898           235  45.50761 -73.551836  45.507117 -73.553148    cocktailbars   \n",
       "1926           133  45.50761 -73.551836  45.501580 -73.559620      brasseries   \n",
       "\n",
-      "      distance  station  \n",
-      "1884       156        0  \n",
-      "1904       154        0  \n",
-      "1924       737        0  \n",
-      "1921       760        0  \n",
-      "1918       177        0  \n",
-      "1916       251        0  \n",
-      "1913       580        0  \n",
-      "1907       324        0  \n",
-      "1898       116        0  \n",
-      "1926       909        0  \n"
+      "      distance  scaled_rating  station  \n",
+      "1884       156         8.7875        0  \n",
+      "1904       154         8.7875        0  \n",
+      "1924       737         8.7875        0  \n",
+      "1921       760         8.7875        0  \n",
+      "1918       177         8.7875        0  \n",
+      "1916       251         8.7875        0  \n",
+      "1913       580         8.7875        0  \n",
+      "1907       324         8.7875        0  \n",
+      "1898       116         8.7875        0  \n",
+      "1926       909         8.7875        0  \n"
      ]
     }
    ],
@@ -3359,7 +3415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3427,7 +3483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3467,7 +3523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3519,7 +3575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3550,17 +3606,17 @@
       "4128             24  45.518967 -73.583616  45.517670 -73.585220   \n",
       "12657            23  45.476294 -73.606175  45.477760 -73.602650   \n",
       "\n",
-      "      category_alias  distance  station  \n",
-      "14147   cocktailbars       310       36  \n",
-      "2040          coffee       243        6  \n",
-      "9629         italian       986      464  \n",
-      "9054        bakeries       475       21  \n",
-      "12653       hawaiian       232      700  \n",
-      "3456        desserts       723      587  \n",
-      "2595         haitian       643      583  \n",
-      "1256          french       177      350  \n",
-      "4128       argentine       183      306  \n",
-      "12657        persian       314      700  \n"
+      "      category_alias  distance  scaled_rating  station  \n",
+      "14147   cocktailbars       310            9.4       36  \n",
+      "2040          coffee       243            9.4        6  \n",
+      "9629         italian       986            9.4      464  \n",
+      "9054        bakeries       475            9.4       21  \n",
+      "12653       hawaiian       232            9.4      700  \n",
+      "3456        desserts       723            9.4      587  \n",
+      "2595         haitian       643            9.4      583  \n",
+      "1256          french       177            9.4      350  \n",
+      "4128       argentine       183            9.4      306  \n",
+      "12657        persian       314            9.4      700  \n"
      ]
     }
    ],
