Fix: versions tag

--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -23,6 +23,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "version_v2_0109800"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
