--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "versions_v2_02091620"
+    "versions_v2_02091742"
    ]
   },
   {
@@ -33,15 +33,20 @@
     "\n",
     "- ## [Functions](#Functions)\n",
     "- ## [Joining](#Joining):\n",
-    "    - [Strategy](#Strategy):\n",
+    "    - [Strategy](#Strategy)\n",
+    "    - [Feature engineering](#feature-engineering):\n",
+    "        - [Create meaningful columns](#create-meaningful-columns)\n",
+    "        - [Cleaning dataframe](#cleaning-dataframe)\n",
+    "        - [Missing values](#missing-values)\n",
     "\n",
     "- ## [Database](#Database):\n",
     "\n",
     "Acronyms and Definition:\n",
     "\n",
-    "+ FSQ = FourSquare\n",
+    "+ fsq = FourSquare (API)\n",
+    "+ yelp = Yelp (API)\n",
     "+ poi(s) = Point Of Interest(s)\n",
-    "+ stations = Bike rental station (Bixi - Montréal)"
+    "+ stations = Bike rental station (Bixi - Montréal, Qc, Canada)"
    ]
   },
   {
@@ -492,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -517,14 +522,14 @@
       " 8   distance         81743 non-null  int64  \n",
       " 9   rating           62355 non-null  float64\n",
       " 10  popularity       51230 non-null  float64\n",
-      " 11  price            60924 non-null  float64\n",
+      " 11  price            60924 non-null  Int64  \n",
       " 12  station          81743 non-null  int64  \n",
       " 13  api_name         81743 non-null  object \n",
       " 14  poi_id           81743 non-null  int64  \n",
       " 15  original_rating  22394 non-null  float64\n",
       " 16  review_count     22394 non-null  float64\n",
-      "dtypes: float64(10), int64(3), object(4)\n",
-      "memory usage: 10.6+ MB\n"
+      "dtypes: Int64(1), float64(9), int64(3), object(4)\n",
+      "memory usage: 10.7+ MB\n"
      ]
     }
    ],
@@ -534,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -559,40 +564,27 @@
       " 8   distance         81743 non-null  int64  \n",
       " 9   rating           62355 non-null  float64\n",
       " 10  popularity       51230 non-null  float64\n",
-      " 11  price            60924 non-null  Int16  \n",
+      " 11  price            60924 non-null  Int64  \n",
       " 12  station          81743 non-null  int64  \n",
       " 13  api_name         81743 non-null  object \n",
       " 14  poi_id           81743 non-null  int64  \n",
       " 15  original_rating  22394 non-null  float64\n",
       " 16  review_count     22394 non-null  Int64  \n",
-      "dtypes: Int16(1), Int64(2), float64(7), int64(3), object(4)\n",
-      "memory usage: 10.4+ MB\n"
+      "dtypes: Int64(3), float64(7), int64(3), object(4)\n",
+      "memory usage: 10.8+ MB\n"
      ]
     }
    ],
    "source": [
-    "# Re-convert datatype after combining\n",
-    "combined_df['category_id'] = pd.to_numeric(\n",
-    "    combined_df['category_id'], \n",
-    "    errors='coerce'\n",
-    ").astype('Int64').fillna(np.nan)\n",
-    "\n",
-    "combined_df['price'] = pd.to_numeric(\n",
-    "    combined_df['price'], \n",
-    "    errors='coerce'\n",
-    ").astype('Int64').fillna(np.nan)\n",
-    "\n",
-    "combined_df['review_count'] = pd.to_numeric(\n",
-    "    combined_df['review_count'], \n",
-    "    errors='coerce'\n",
-    ").astype('Int64').fillna(np.nan)\n",
-    "\n",
+    "combined_df['category_id'] = combined_df['category_id'].astype('Int64')\n",
+    "combined_df['price'] = combined_df['price'].astype('Int64')\n",
+    "combined_df['review_count'] = combined_df['review_count'].astype('Int64')\n",
     "combined_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -772,7 +764,7 @@
        "4          <NA>  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,35 +774,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Rounding values\n",
-    "combined_df[['category_id', 'price', 'review_count']] = combined_df[['category_id', 'price', 'review_count']].round()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Missing values\n",
-    "- Let see if Yelp POIs latitude and longitude match FourSquare.<br>\n",
-    "If so, we could try to fill some missing values for rating, price, review count and categpries"
+    "Let see if we can find a way to reconnect the same POI from both API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   station                         name      p_lat      p_lon  poi_id  \\\n",
+      "0      564  Lasalle Drive-In Restaurant  45.415116 -73.621609    3479   \n",
+      "1      564  Lasalle Drive-In Restaurant  45.415137 -73.621927     715   \n",
+      "2      564            Capitales Burgers  45.417063 -73.620510    2119   \n",
+      "3      564            Capitales Burgers  45.417193 -73.620034    5216   \n",
+      "4      564               Ayo Restaurant  45.420987 -73.631326    4773   \n",
+      "5      564               Ayo Restaurant  45.421010 -73.631280       6   \n",
+      "6      559             Grillades Torino  45.421681 -73.493897     195   \n",
+      "7      531                   Le Saucier  45.422707 -73.612000     238   \n",
+      "8      417           Buffalo Bill Wings  45.423378 -73.641848    2958   \n",
+      "9      417                 Double Pizza  45.423480 -73.641740    1372   \n",
+      "\n",
+      "     api_name                api_number  \n",
+      "0  FourSquare  4b884e1ff964a520f1ed31e3  \n",
+      "1        Yelp    IaUx8KmmqY2Z-58d_E0_mg  \n",
+      "2        Yelp    sWFGuy-45ZGz4g9hn4ZVyw  \n",
+      "3  FourSquare  55c6637d498eff6d60471a8c  \n",
+      "4  FourSquare  50be8855e4b0c56b41b2aecc  \n",
+      "5        Yelp    -DXRTcIIFSDFaec9SozG3A  \n",
+      "6        Yelp    4W8aG-VqWKJaan3jhrxxAg  \n",
+      "7        Yelp    5jNkYnWI2yp0RYzgdn5wzA  \n",
+      "8  FourSquare  44e4f1d847b74f4462370945  \n",
+      "9        Yelp    Zw5EbC4ICkK3UP9iaKtn_g  \n"
+     ]
+    }
+   ],
    "source": [
     "# Filter unique api_number, sort per p_lat, p_lon\n",
-    "sorted_df = combined_df[['station', 'name', 'p_lat', 'p_lon', 'api_number', 'api_name']].drop_duplicates(subset=['api_number']).sort_values(['p_lat', 'p_lon'])\n",
-    "filtered_df = sorted_df[sorted_df.duplicated(subset='name', keep=False)]\n",
+    "sorted_df = (\n",
+    "    combined_df[['station', 'name', 'p_lat', 'p_lon', 'poi_id', 'api_name', 'api_number']]\n",
+    "    .drop_duplicates(subset=['api_number'])\n",
+    "    .sort_values(['p_lat', 'p_lon', 'poi_id'])\n",
+    ")\n",
+    "filtered_df = sorted_df[sorted_df.duplicated(subset='name', keep=False)].reset_index(drop=True).copy()\n",
     "print(filtered_df.head(10))"
    ]
   },
@@ -818,25 +831,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The locations slightly diverge with a tolerance of .001. We will create a poi_id column to differentiate them and then validate the name of the POI."
+    "The locations slightly diverge. We could try to reassign the Min(poi_id) (the one created for Yelp) when the name is similar within the same station and next to each other (p.lat, p_lon)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   station                         name      p_lat      p_lon  poi_id  \\\n",
+      "0      564  Lasalle Drive-In Restaurant  45.415116 -73.621609    3479   \n",
+      "1      564  Lasalle Drive-In Restaurant  45.415137 -73.621927     715   \n",
+      "2      564            Capitales Burgers  45.417063 -73.620510    2119   \n",
+      "3      564            Capitales Burgers  45.417193 -73.620034    5216   \n",
+      "4      564               Ayo Restaurant  45.420987 -73.631326    4773   \n",
+      "5      564               Ayo Restaurant  45.421010 -73.631280       6   \n",
+      "6      559             Grillades Torino  45.421681 -73.493897     195   \n",
+      "7      531                   Le Saucier  45.422707 -73.612000     238   \n",
+      "8      417           Buffalo Bill Wings  45.423378 -73.641848    2958   \n",
+      "9      417                 Double Pizza  45.423480 -73.641740    1372   \n",
+      "\n",
+      "     api_name                api_number  updated_poi_id  \n",
+      "0  FourSquare  4b884e1ff964a520f1ed31e3            3479  \n",
+      "1        Yelp    IaUx8KmmqY2Z-58d_E0_mg             715  \n",
+      "2        Yelp    sWFGuy-45ZGz4g9hn4ZVyw            2119  \n",
+      "3  FourSquare  55c6637d498eff6d60471a8c            2119  \n",
+      "4  FourSquare  50be8855e4b0c56b41b2aecc            4773  \n",
+      "5        Yelp    -DXRTcIIFSDFaec9SozG3A               6  \n",
+      "6        Yelp    4W8aG-VqWKJaan3jhrxxAg             195  \n",
+      "7        Yelp    5jNkYnWI2yp0RYzgdn5wzA             238  \n",
+      "8  FourSquare  44e4f1d847b74f4462370945            2958  \n",
+      "9        Yelp    Zw5EbC4ICkK3UP9iaKtn_g            1372  \n"
+     ]
+    }
+   ],
    "source": [
-    "# Correct column type\n",
-    "combined_df['poi_id'] = combined_df['poi_id'].astype(int)\n",
-    "combined_df.head()"
+    "filtered_df['updated_poi_id'] = filtered_df['poi_id']\n",
+    "df = filtered_df\n",
+    "\n",
+    "# Iterate over rows in the DataFrame\n",
+    "for index, row in df.iterrows():\n",
+    "    if index < len(df) - 1:\n",
+    "        # Check if the current row and the next row have similar 'name', 'station', and are adjacent\n",
+    "        pattern = re.compile(re.escape(row['name']), re.IGNORECASE)\n",
+    "\n",
+    "        # Check if the current row's 'name' or the next row's 'name' matches the pattern\n",
+    "        if (\n",
+    "            (pattern.search(row['name']) or pattern.search(df.at[index + 1, 'name']))\n",
+    "            and row['station'] == df.at[index + 1, 'station']\n",
+    "        ):\n",
+    "            # Update the 'updated_poi_id' column with the minimum poi_id value\n",
+    "            df.at[index + 1, 'updated_poi_id'] = min(row['poi_id'], df.at[index + 1, 'poi_id'])\n",
+    "print(filtered_df.head(10))"
    ]
   },
   {
